; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/windowscodecs/extr_converter.c_get_formatinfo.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/windowscodecs/extr_converter.c_get_formatinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pixelformatinfo = type { i64 }

@supported_formats = common dso_local global %struct.pixelformatinfo* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.pixelformatinfo* (i32*)* @get_formatinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.pixelformatinfo* @get_formatinfo(i32* %0) #0 {
  %2 = alloca %struct.pixelformatinfo*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 0, i64* %4, align 8
  br label %5

5:                                                ; preds = %26, %1
  %6 = load %struct.pixelformatinfo*, %struct.pixelformatinfo** @supported_formats, align 8
  %7 = load i64, i64* %4, align 8
  %8 = getelementptr inbounds %struct.pixelformatinfo, %struct.pixelformatinfo* %6, i64 %7
  %9 = getelementptr inbounds %struct.pixelformatinfo, %struct.pixelformatinfo* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %29

12:                                               ; preds = %5
  %13 = load %struct.pixelformatinfo*, %struct.pixelformatinfo** @supported_formats, align 8
  %14 = load i64, i64* %4, align 8
  %15 = getelementptr inbounds %struct.pixelformatinfo, %struct.pixelformatinfo* %13, i64 %14
  %16 = getelementptr inbounds %struct.pixelformatinfo, %struct.pixelformatinfo* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i32*, i32** %3, align 8
  %19 = call i64 @IsEqualGUID(i64 %17, i32* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %12
  %22 = load %struct.pixelformatinfo*, %struct.pixelformatinfo** @supported_formats, align 8
  %23 = load i64, i64* %4, align 8
  %24 = getelementptr inbounds %struct.pixelformatinfo, %struct.pixelformatinfo* %22, i64 %23
  store %struct.pixelformatinfo* %24, %struct.pixelformatinfo** %2, align 8
  br label %30

25:                                               ; preds = %12
  br label %26

26:                                               ; preds = %25
  %27 = load i64, i64* %4, align 8
  %28 = add i64 %27, 1
  store i64 %28, i64* %4, align 8
  br label %5

29:                                               ; preds = %5
  store %struct.pixelformatinfo* null, %struct.pixelformatinfo** %2, align 8
  br label %30

30:                                               ; preds = %29, %21
  %31 = load %struct.pixelformatinfo*, %struct.pixelformatinfo** %2, align 8
  ret %struct.pixelformatinfo* %31
}

declare dso_local i64 @IsEqualGUID(i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
